pa44